   some radio search listing entries.
3. For non-server side categories, use "readdirectory" command to list music
   folders. This is *much* faster, but does not provide meta-data, and file
   types are manually filtered based upon extension.
4. Get ratings from status messages, but still only show if trackstat
   installed.
5. Show ratings in queue - desktop layout only.
6. Work-around longpress issues, by checking element ID of events.

0.7.2
-----
 1. Fix clicking on 'Browse' bottom navigation button in mobile view causing
    browse view to navigate back when changing from 'Now Playing' / 'Queue'
 2. Better positioning of song details in portrait mobile now-playing.
 3. In sleep dialog, show all options in a clickable list.
 4. Disable "Show track information" from now-playing context menu if no
    track_id
 5. Fix Custom Browse "New Albums" and "New Artists", by only asking for a max
    of either the configured "New Music Limit" or 100 items.
 6. Indent "Information" dialog contents, to be consistent with settings dialogs.
 7. Attempt to match Custom Browse categories with icons.
 8. Add search categories: All, Artists, Albums, Tracks, or Playlists
 9. If coverid/arwork is empty in search results, use default image.
10. Un-escape title's when clicking on artist/album in queue.
11. Give lazy-loaded images a key, so that they update correctly.
12. Add support links, etc. to Information dialog.

0.7.1
-----
1. Fix clearing selection when adding, inserting, or playing tracks.
2. Fix composers not showing in now playing and queue.
3. Fix scrolling to current queue item for desktop layout.

0.7.0
-----
 1. Use role/genre/artist filter when listing album tracks in more scenarios.
 2. Fix menu button position for grid items when there are only a few.
 3. Remove usage of vue-router.
 4. Allow jump-list to have more entries.
 5. Fix jumplist colours, especially for light variant.
 6. Remove 'Music Folders' from non-server categories listing, its just too
    slow.