@@ -142,7 +142,7 @@ var lmsBrowse = Vue.component("lms-browse", {
   </v-layout>
   <v-layout v-else>
    <v-btn flat icon @click="goHome()" class="toolbar-button" id="home-button"><v-icon>home</v-icon></v-btn>
-   <v-btn flat icon v-longpress="backBtnPressed" class="toolbar-button" id="back-button"><v-icon>arrow_back</v-icon></v-btn>
+   <v-btn flat icon @click="backBtnPressed()" class="toolbar-button" id="back-button"><v-icon>arrow_back</v-icon></v-btn>
    <v-layout row wrap @click="showHistory($event)" v-if="headerSubTitle" v-bind:class="{pointer : history.length>1}">
     <v-flex xs12 class="ellipsis subtoolbar-title">{{headerTitle}}</v-flex>
     <v-flex xs12 class="ellipsis subtoolbar-subtitle subtext">{{headerSubTitle}}</v-flex>
@@ -1309,13 +1309,9 @@ itemAc
                 this.goBack();
             }
         },
-        backBtnPressed(home) {
+        backBtnPressed() {
             this.lastBackBtnPress = new Date();
-            if (home) {
-                this.goHome();
-            } else {
-                this.goBack();
-            }
+            this.goBack();
         },
         goBack(refresh) {
             if (this.fetchingItems) {
